<resources>
    <string name="app_name">Movies Android Kata</string>
    <string name="action_settings">Settings</string>
    <string name="movies_count_text">Movies: %d</string>
    <string name="loading_movies_text">Loading movies...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="poster_movie">poster_movie</string>
    <string name="star_wars">Star Wars</string>
    <string name="overview">Overview</string>
    <string name="description">Description</string>
    <string name="refresh_page">refresh_page</string>
    <string name="loading_movie">Loading movie...</string>
</resources>
