<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".presentation.ui.fragment.MovieDetailFragment">

    <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <ImageView
                android:id="@+id/item_movie_poster"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/poster_movie" />
        <TextView
                android:id="@+id/item_movie_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                style="@style/TextAppearance.AppCompat.Display1"
                tools:text="@string/star_wars"/>
        <TextView
                android:id="@+id/item_movie_overview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="8dp"
                style="@style/TextAppearance.AppCompat.Headline"
                tools:text="@string/overview"/>
        <TextView
                android:id="@+id/item_movie_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginBottom="16dp"
                style="@style/TextAppearance.AppCompat.Large"
                tools:text="@string/description"/>
    </android.support.v7.widget.LinearLayoutCompat>

    <TextView
            android:id="@+id/loading"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/loading_movie"/>

</RelativeLayout>